Story #3190094 : Upgraded to Java 21, updated unit tests and integration tests